added new posts
Signed-off-by: yptheangel <choowilson93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ChooWilson</title>
+		<title>Choo Wilson's portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>C H O O W I L S O N</h1>
+						<h1>CHOO WILSON</h1>
 						<p>Software Engineer - Deep Learning - Computer Vision - Android App Dev - Robotics</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -38,8 +38,9 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/choowilsonpro/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://penangprogrammer.blogspot.com/" class="icon brands fa-blogger"><span class="label">Blogger</span></a></li>
 							<li><a href="https://github.com/yptheangel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.youtube.com/user/wiLsonChoO93/" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+							<li><a href="https://penangprogrammer.blogspot.com/" class="icon brands fa-blogger"><span class="label">Blogger</span></a></li>
 						</ul>
 					</nav>
 
@@ -50,11 +51,9 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">November 26 , 2019</span>
-									<h2><a href="#">Fitness Counter<br />AI<br />Deep Learning</a></h2>
+									<h2><a href="#">AI Fitness Counter<br />Deep Learning</a></h2>
 									<p>GymmyFive Coming Soon in 2020 with more Deep Learning in it!</p>
-
-									<p>Demo of Exercise Counter in 2018 Penang Science Fair, tested by actual students.</p>
-
+									<p>Demo of Exercise Counter in 2018 Penang Science Fair, tested by actual students.<br/>Application uses Intel OpenVINO toolkit and OpenCV in C++.</p>
 								</header>
 								<a href="https://github.com/yptheangel/gymmy3" class="image main"><img src="images/gymmy3.gif" alt="" /></a>
 								<ul class="actions special">
@@ -62,7 +61,29 @@
 								</ul>
 							</article>
 
-						
+							<article class="MNIST Classifier on Android">
+								<header class="major">
+									<span class="date">September 5 , 2019</span>
+									<h2><a href="#">MNIST Classifier on Android<br />Deeplearning4j</a></h2>
+									<p>Train and Inference a MNIST Classifier on a Android mobile device.<br />MNIST dataset loaded in Android device and start training on arm CPU using DL4J in Java.</p>
+								</header>
+								<a href="https://github.com/yptheangel/dl4j-examples" class="image main"><img src="images/mnistandroid.gif" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="#" class="button large">Full Story</a></li>
+								</ul>
+							</article>
+
+							<article class="YOLOv2 Object Detection">
+								<header class="major">
+									<span class="date">December 2 , 2019</span>
+									<h2><a href="#">YOLOv2 Object Detection<br />Deeplearning4j</a></h2>
+									<p>Inference a pretrained COCO-YOLOv2 model on a video.<br />Application uses DL4J, JavaCV, FFMpeg in Java.</p>
+								</header>
+								<a href="https://gist.github.com/choowilson/a4f40b6badb2b1451ff778dfc6b3e92e" class="image main"><img src="images/yolov2.gif" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="#" class="button large">Full Story</a></li>
+								</ul>
+							</article>
 
 						<!-- Footer -->
 							<footer>
@@ -75,8 +96,9 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/choowilsonpro/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://penangprogrammer.blogspot.com/" class="icon brands fa-blogger"><span class="label">Blogger</span></a></li>
 									<li><a href="https://github.com/yptheangel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.youtube.com/user/wiLsonChoO93/" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+									<li><a href="https://penangprogrammer.blogspot.com/" class="icon brands fa-blogger"><span class="label">Blogger</span></a></li>
 								</ul>
 							</section>
 						</section>
