add new project

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 									<p>Demo of Exercise Counter in 2018 Penang Science Fair, tested by actual students.<br/>Application uses Intel OpenVINO toolkit and OpenCV in C++.</p>
 								</header>
 								<a href="https://github.com/yptheangel/gymmy3" class="image main"><img src="images/gymmy3.gif" alt="" /></a>
-								<ul class="actions special">
+								<!-- <ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+								</ul> -->
 							</article>
 
 							<article class="MNIST Classifier on Android">
@@ -67,10 +67,21 @@
 									<h2><a href="#">MNIST Classifier on Android<br />Deeplearning4j</a></h2>
 									<p>Train and Inference a MNIST Classifier on a Android mobile device.<br />MNIST dataset loaded in Android device and start training on arm CPU using DL4J in Java.</p>
 								</header>
-								<a href="https://github.com/yptheangel/dl4j-examples" class="image main"><img src="images/mnistandroid.gif" alt="" /></a>
-								<ul class="actions special">
+								<a href="https://github.com/yptheangel/dl4j-examples" class="image main"><img src="images/mnistandroid.gif" alt=""  /></a>
+								<!-- <ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+								</ul> -->
+							</article>
+							<article class="Facial Landmark Prediction">
+								<header class="major">
+									<span class="date">January 5 , 2020</span>
+									<h2><a href="#">Facial Landmarks Detection</a></h2>
+									<p>Train and Inference a MNIST Classifier on a Android mobile device.<br />MNIST dataset loaded in Android device and start training on arm CPU using DL4J in Java.</p>
+								</header>
+								<a href="https://github.com/yptheangel" class="image main"><img src="images/facial_landmarks.gif"  /></a>
+								<!-- <ul class="actions special">
+									<li><a href="#" class="button large">Full Story</a></li>
+								</ul> -->
 							</article>
 
 							<article class="YOLOv2 Object Detection">
@@ -79,10 +90,10 @@
 									<h2><a href="#">YOLOv2 Object Detection<br />Deeplearning4j</a></h2>
 									<p>Inference a pretrained COCO-YOLOv2 model on a video.<br />Application uses DL4J, JavaCV, FFMpeg in Java.</p>
 								</header>
-								<a href="https://gist.github.com/choowilson/a4f40b6badb2b1451ff778dfc6b3e92e" class="image main"><img src="images/yolov2.gif" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+								<a href="https://gist.github.com/choowilson/a4f40b6badb2b1451ff778dfc6b3e92e" class="image main"><img src="images/yolov2.gif"  alt="" /></a>
+								<!-- <ul class="actions special">
+									<li><a href="#" class="button large">Full Story</a></li> -->
+								<!-- </ul> -->
 							</article>
 
 						<!-- Footer -->
