correct the description
Signed-off-by: yptheangel <choowilson93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 							<article class="Facial Landmark Prediction">
 								<header class="major">
 									<span class="date">January 5 , 2020</span>
-									<h2><a href="#">Facial Landmarks Detection</a></h2>
-									<p>Train and Inference a MNIST Classifier on a Android mobile device.<br />MNIST dataset loaded in Android device and start training on arm CPU using DL4J in Java.</p>
+									<h2><a href="#">Facial Landmark Prediction</a></h2>
+									<p>Predicts 68 facial points by using Dlib library<br /></p>
 								</header>
 								<a href="https://github.com/yptheangel" class="image main"><img src="images/facial_landmarks.gif"  /></a>
 								<!-- <ul class="actions special">
