--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul> -->
 							</article>
+							<article class="Neural Style Transfer on Video">
+								<header class="major">
+									<span class="date">March 14 , 2020</span>
+									<h2><a href="#">Neural Style Transfer<br />PyTorch</a></h2>
+									<p>Perform neural style transfer on video frames the fast way.</p>
+								</header>
+								<a href="https://github.com/yptheangel/dl4j-examples" class="image main"><img src="images/style-transfer.gif" alt=""  /></a>
+								<!-- <ul class="actions special">
+									<li><a href="#" class="button large">Full Story</a></li>
+								</ul> -->
+							</article>
 
 							<article class="MNIST Classifier on Android">
 								<header class="major">
@@ -76,7 +87,7 @@
 								<header class="major">
 									<span class="date">January 5 , 2020</span>
 									<h2><a href="#">Facial Landmark Prediction</a></h2>
-									<p>Predicts 68 facial points by using Dlib library<br /></p>
+									<p>Predicts 68 facial points by using Dlib library.<br /></p>
 								</header>
 								<a href="https://github.com/yptheangel" class="image main"><img src="images/facial_landmarks.gif"  /></a>
 								<!-- <ul class="actions special">
