change entire website style
Signed-off-by: yptheangel <choowilson93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,142 +1,147 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Choo Wilson's portfolio</title>
+		<title>About Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a href="https://www.linkedin.com/in/choowilsonpro/" class="image avatar"><img src="images/me.jpg" alt="" /></a>
+					<h1><strong>Guten Tag</strong>, I'm Choo Wilson.<br />
+					I'm into Computer Vision,<br />
+					 Deep Learning,<br />
+					  Mobile App AI<br />
+					   and Robotics.
+					</h1>
+				</div>
+			</header>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>CHOO WILSON</h1>
-						<p>Software Engineer - Deep Learning - Computer Vision - Android App Dev - Robotics</p>
+		<!-- Main -->
+			<div id="main">
+				<!-- One -->
+					<section id="one">
+						<header class="major">
+							<h2>Welcome to my portfolio. </br>What do I do for a living?</h2>
+						</header>
+						<p>Computer Vision is my thing. I build and fine-tune custom Deep Learning models from different DL frameworks and deploy it on JVM
+							and pythonic systems. I do research on state-of-the-art deep learning models and perform model migration, optimization
+							 and deployment on local servers, mobile devices, cloud servers and embedded
+							systems. I also train engineers from the industry on deep learning fundamentals and practical skills.<br/>
+							我擅长于深度学习模型调参与迁移学习。
+							模型与Java,Python,C++软件系统整合。
+							物体检测与分类，精通于计算机视觉。	
+						</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="https://www.linkedin.com/in/choowilsonpro/" class="button">Learn More</a></li>
 						</ul>
-					</div>
+					</section>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Portfolio</a>
-					</header>
+				<!-- Two -->
+					<section id="two">
+						<h2>Recent Work</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/blackjackrobot_full.jpg" class="image fit thumb"><img src="images/thumbs/blackjackrobot_thumb.jpg" alt="" /></a>
+								<h3>Blackjack Robot - March 3 , 2020</h3>
+								<p>Autonomous Blackjack Playing Robot<br/>Features include Card Recognition,Poker Chip Recognition, Auto-Dealing, Orientation Correction.<br/>This project uses DL4J, JavaCV, Keras, built using Java.<br/>
+									<a href="https://youtu.be/vTvixTzMGh0">Youtube video is Here</a></p>
+							</article>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">PROJECTS</a></li>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/jumpjackCounter_full.jpg" class="image fit thumb"><img src="images/thumbs/jumpjackCounter_thumb.png" alt="" /></a>
+								<h3>AI Fitness Counter - November 26 , 2018</h3>
+								<p>Demo of Exercise Counter in 2018 Penang Science Fair, tested by actual students.<br/>GymmyFive Coming Soon in 2020 with more Deep Learning in it!<br/>Application uses Intel OpenVINO toolkit and OpenCV in C++.<br/>
+									<a href="https://github.com/yptheangel/gymmy3">Code is Here</a></p>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/nst_full.jpg" class="image fit thumb"><img src="images/thumbs/nst_full_thumb.jpg" alt="" /></a>
+								<h3>Neural Style Transfer on Video - March 14 , 2020</h3>
+								<p>Perform neural style transfer on video frames the fast way using PyTorch.<br/>
+									<a href="https://github.com/yptheangel/music-video-generator">Code is Here</a></p>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/mnistclassifierandroid_full.jpg" class="image fit thumb"><img src="images/thumbs/mnistclassifierandroid_thumb.jpg" alt="" /></a>
+								<h3>MNIST Classifier on Android - September 5 , 2019</h3>
+								<p>Train and Inference a MNIST Classifier on a Android mobile device.<br />MNIST dataset loaded in Android device and start training on arm CPU using DL4J in Java.<br/>
+									<a href="https://github.com/yptheangel/dl4j-examples">Code is Here</a><br/>
+									<a href="https://youtu.be/EHe6GGga-tY?t=2296">Youtube video is Here</a></p>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/facelandmarks_full.jpg" class="image fit thumb"><img src="images/thumbs/facelandmarks_thumb.jpg" alt="" /></a>
+								<h3>Facial Landmark Prediction - January 5 , 2020</h3>
+								<p>Predicts 68 facial landmarks points by using Dlib library in C++ or Python.<br/>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/yolo2_full.jpg" class="image fit thumb"><img src="images/thumbs/yolo2_thumb.jpg" alt="" /></a>
+								<h3>YOLOv2 Object Detection - December 2 , 2019</h3>
+								<p>Inference a pretrained COCO-YOLOv2 model on a video.<br />Application uses DL4J(Deeplearning4J), JavaCV, FFMpeg in Java.<br/>
+									<a href="https://gist.github.com/choowilson/a4f40b6badb2b1451ff778dfc6b3e92e">Code is Here</a><br/>
+									<a href="https://youtu.be/DGrk3J40Scc">Youtube video is Here</a></p>
+							</article>
+						</div>
+						<ul class="actions">
+							<li><a href="https://www.linkedin.com/in/choowilsonpro/" class="button">Full Portfolio</a></li>
 						</ul>
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/choowilsonpro/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/yptheangel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.youtube.com/user/wiLsonChoO93/" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-							<li><a href="https://penangprogrammer.blogspot.com/" class="icon brands fa-blogger"><span class="label">Blogger</span></a></li>
-						</ul>
-					</nav>
+					</section>
 
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">November 26 , 2019</span>
-									<h2><a href="#">AI Fitness Counter<br />Deep Learning</a></h2>
-									<p>GymmyFive Coming Soon in 2020 with more Deep Learning in it!</p>
-									<p>Demo of Exercise Counter in 2018 Penang Science Fair, tested by actual students.<br/>Application uses Intel OpenVINO toolkit and OpenCV in C++.</p>
-								</header>
-								<a href="https://github.com/yptheangel/gymmy3" class="image main"><img src="images/gymmy3.gif" alt="" /></a>
-								<!-- <ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul> -->
-							</article>
-							<article class="Neural Style Transfer on Video">
-								<header class="major">
-									<span class="date">March 14 , 2020</span>
-									<h2><a href="#">Neural Style Transfer<br />PyTorch</a></h2>
-									<p>Perform neural style transfer on video frames the fast way.</p>
-								</header>
-								<a href="https://github.com/yptheangel/dl4j-examples" class="image main"><img src="images/style-transfer.gif" alt=""  /></a>
-								<!-- <ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul> -->
-							</article>
-
-							<article class="MNIST Classifier on Android">
-								<header class="major">
-									<span class="date">September 5 , 2019</span>
-									<h2><a href="#">MNIST Classifier on Android<br />Deeplearning4j</a></h2>
-									<p>Train and Inference a MNIST Classifier on a Android mobile device.<br />MNIST dataset loaded in Android device and start training on arm CPU using DL4J in Java.</p>
-								</header>
-								<a href="https://github.com/yptheangel/dl4j-examples" class="image main"><img src="images/mnistandroid.gif" alt=""  /></a>
-								<!-- <ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul> -->
-							</article>
-							<article class="Facial Landmark Prediction">
-								<header class="major">
-									<span class="date">January 5 , 2020</span>
-									<h2><a href="#">Facial Landmark Prediction</a></h2>
-									<p>Predicts 68 facial points by using Dlib library.<br /></p>
-								</header>
-								<a href="https://github.com/yptheangel" class="image main"><img src="images/facial_landmarks.gif"  /></a>
-								<!-- <ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul> -->
-							</article>
-
-							<article class="YOLOv2 Object Detection">
-								<header class="major">
-									<span class="date">December 2 , 2019</span>
-									<h2><a href="#">YOLOv2 Object Detection<br />Deeplearning4j</a></h2>
-									<p>Inference a pretrained COCO-YOLOv2 model on a video.<br />Application uses DL4J, JavaCV, FFMpeg in Java.</p>
-								</header>
-								<a href="https://gist.github.com/choowilson/a4f40b6badb2b1451ff778dfc6b3e92e" class="image main"><img src="images/yolov2.gif"  alt="" /></a>
-								<!-- <ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li> -->
-								<!-- </ul> -->
-							</article>
-
-						<!-- Footer -->
-							<footer>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/choowilsonpro/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://github.com/yptheangel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://www.youtube.com/user/wiLsonChoO93/" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-									<li><a href="https://penangprogrammer.blogspot.com/" class="icon brands fa-blogger"><span class="label">Blogger</span></a></li>
+				<!-- Three -->
+					<section id="three">
+						<h2>Get In Touch</h2>
+						<p>Contact me on LinkedIn or Github if you would like to speak to me.</p>
+						<!-- <div class="row">
+							<div class="col-8 col-12-small">
+								<form method="post" action="#">
+									<div class="row gtr-uniform gtr-50">
+										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+									</div>
+								</form>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</section>
-						</section>
-					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; penangprogrammer.blogspot.com</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
-
+							</div>
+							<div class="col-4 col-12-small">
+								<ul class="labeled-icons">
+									<li>
+										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+										Penang,<br />
+										Malaysia
+									</li>
+									<li>
+										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+										<a href="#">hello@untitled.tld</a>
+									</li> 
+								</ul>
+							</div> -->
+						</div>
+					</section>		
 			</div>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/choowilsonpro/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/yptheangel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.youtube.com/user/wiLsonChoO93/" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="https://penangprogrammer.blogspot.com/" class="icon brands fa-blogger"><span class="label">Blogger</span></a></li>
+					</ul>
+				</div>
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
