add minor change
Signed-off-by: yptheangel <choowilson93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 								<a href="images/fulls/nst_full.jpg" class="image fit thumb"><img src="images/thumbs/nst_full_thumb.jpg" alt="" /></a>
 								<h3>Neural Style Transfer on Video - March 14 , 2020</h3>
 								<p>Perform neural style transfer on video frames the fast way using PyTorch.<br/>
-									<a href="https://github.com/yptheangel/music-video-generator">Code is Here</a></p>
+									<a href="https://github.com/yptheangel/music-video-generator">Code is Here</a>
+									<a href="https://youtu.be/oUpQWy5EJLE?t=205">Youtube video is Here</a></p>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
