add social distance proj
Signed-off-by: yptheangel <choowilson93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/social-distance-checker-full.jpg" class="image fit thumb"><img src="images/thumbs/social-distance-checker_thumb.jpg" alt="" /></a>
+								<h3>Social Distance Monitoring System in Java - April 30 , 2020</h3>
+								<p>Social Distance Monitoring System <br/>Features include social distance monitoring, people counting.<br/>This project uses DL4J, JavaCV, Keras, built using Java.<br/>
+									<a href="https://github.com/yptheangel/SocialDistancingChecker">Code is Here</a><br/>
+									<a href="https://youtu.be/Yw7NVNRpe34">Youtube video is Here</a></p>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/blackjackrobot_full.jpg" class="image fit thumb"><img src="images/thumbs/blackjackrobot_thumb.jpg" alt="" /></a>
 								<h3>Blackjack Robot - March 3 , 2020</h3>
 								<p>Autonomous Blackjack Playing Robot<br/>Features include Card Recognition,Poker Chip Recognition, Auto-Dealing, Orientation Correction.<br/>This project uses DL4J, JavaCV, Keras, built using Java.<br/>
