--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/ocat_full.png" class="image fit thumb"><img src="images/thumbs/ocat_thumb.png" alt="" /></a>
+								<h3>Online Classroom Attention Tracker - July 16 , 2020</h3>
+								<p>Online Classroom Attention Tracker <br/>Monitor student's attention metrics<br/>This project uses PyTorch, OpenCV, PyQtGraph, ZeroMQ, React<br/>
+									<a href="https://github.com/yptheangel/attention-monitor">Code is Here</a><br/>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/social-distance-checker-full.jpg" class="image fit thumb"><img src="images/thumbs/social-distance-checker_thumb.jpg" alt="" /></a>
 								<h3>Social Distance Monitoring System in Java - April 30 , 2020</h3>
 								<p>Social Distance Monitoring System <br/>Features include social distance monitoring, people counting.<br/>This project uses DL4J, JavaCV, Keras, built using Java.<br/>
