add human segmentation project
Signed-off-by: yptheangel <choowilson93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/humanseg_full.jpg" class="image fit thumb"><img src="images/fulls/humanseg_full.jpg" alt="" /></a>
+								<h3>Person + Skin Segmentation - November 4 , 2020</h3>
+								<p>Person + Skin Segmentation <br />Person Segmentation + Skin Segmentation + Calculate Skin to Image Size Ratio<br />This project uses PyTorch,
+									OpenCV<br />
+									<a href="https://github.com/yptheangel/human-skin-segmentation">Code is Here</a><br />
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/ocat_full.png" class="image fit thumb"><img src="images/thumbs/ocat_thumb.png" alt="" /></a>
 								<h3>Online Classroom Attention Tracker - July 16 , 2020</h3>
 								<p>Online Classroom Attention Tracker <br/>Monitor student's attention metrics<br/>This project uses PyTorch, OpenCV, PyQtGraph, ZeroMQ, React<br/>
